--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,60 @@
 body {
-  background-color: slategray;
+  background-color: black;
+  color: white;
 }
+
+nav {
+  /* overflow: hidden; */
+  /* position: fixed; */
+  width: 100%;
+}
+
+.list {
+  list-style-type: none;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: static;
+}
+
+.items a {
+  color: white;
+  text-decoration: none;
+}
+
+.items {
+  font-size: small;
+  text-transform: uppercase;
+  padding: 10px;
+}
+
+.app-header {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  position: static;
+}
+
+.nav-btn {
+  display: none;
+  background-color: black;
+  width: 25%;
+}
+
+#nav-img {
+  width: 100%;
+}
+
+#app-img {
+  width: 35%;
+  margin-left: 33%;
+}
+@media screen and (max-width: 575px) {
+  .nav-btn {
+    display: block;
+  }
+
+}
+
