--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 body {
-  background-color: black;
-  color: white;
 }
 
 nav {
   /* overflow: hidden; */
+  background-color: black;
   /* position: fixed; */
   width: 100%;
 }
@@ -41,6 +40,7 @@ nav {
   display: none;
   background-color: black;
   width: 25%;
+  border: 0px solid white;
 }
 
 #nav-img {
