--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 body {
+  background-image: url("../public/backgroun-pattern.png");
+  color: white;
 }
 
 nav {
@@ -6,6 +8,8 @@ nav {
   background-color: black;
   /* position: fixed; */
   width: 100%;
+  font-family: 'Manrope', sans-serif;
+  font-weight: 600;
 }
 
 .list {
@@ -51,10 +55,172 @@ nav {
   width: 35%;
   margin-left: 33%;
 }
+
+/* app tsx */
+
+.app-tsx {
+  text-align: center;
+}
+
+/* home page  */
+.home-page {
+  font-family: 'Manrope', sans-serif;
+  text-align: center;;
+  border-radius: 10px;
+  padding: 10px;
+  
+}
+
+.home-link {
+  border-radius: 20px;
+  padding: 10px;
+  font-family: 'Manrope', sans-serif;
+  font-weight:600;
+  background-color: transparent;
+  color: white;
+  border: 2px solid white;
+}
+
+/* create listing form  */
+
+
+.create-listing-form {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.form {
+  border-radius: 20px;
+  box-sizing: border-box;
+  padding: 20px;
+  width: 320px;
+}
+
+.title {
+  color: #eee;
+  font-family: sans-serif;
+  font-size: 36px;
+  font-weight: 600;
+  margin-top: 30px;
+}
+
+.subtitle {
+  color: #eee;
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+
+.input-container {
+  height: 50px;
+  position: relative;
+  width: 100%;
+}
+
+.ic1 {
+  margin-top: 40px;
+}
+
+.ic2 {
+  margin-top: 30px;
+}
+
+.input {
+  background-color: black;
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  color: #eee;
+  font-size: 18px;
+  height: 100%;
+  outline: 0;
+  padding: 4px 20px 0;
+  width: 100%;
+}
+
+.cut {
+  background-color: #15172b;
+  border-radius: 10px;
+  height: 20px;
+  left: 20px;
+  position: absolute;
+  top: -20px;
+  transform: translateY(0);
+  transition: transform 200ms;
+  width: 76px;
+}
+
+.cut-short {
+  width: 50px;
+}
+
+.input:focus ~ .cut,
+.input:not(:placeholder-shown) ~ .cut {
+  transform: translateY(8px);
+}
+
+.placeholder {
+  color: white;
+  font-family: sans-serif;
+  left: 20px;
+  line-height: 14px;
+  pointer-events: none;
+  position: absolute;
+  transform-origin: 0 50%;
+  transition: transform 200ms, color 200ms;
+  top: 20px;
+}
+
+.input:focus ~ .placeholder,
+.input:not(:placeholder-shown) ~ .placeholder {
+  transform: translateY(-30px) translateX(10px) scale(0.75);
+}
+
+.input:not(:placeholder-shown) ~ .placeholder {
+  color: #808097;
+}
+
+.input:focus ~ .placeholder {
+  color: white;
+}
+
+.submit {
+  background-color: transparent;
+  font-family: 'Manrope', sans-serif;
+  font-weight: bold;
+  border-radius: 30px;
+  border: 2px solid white;
+  box-sizing: border-box;
+  color: #eee;
+  cursor: pointer;
+  font-size: 18px;
+  height: 50px;
+  margin-top: 38px;
+  outline: 0;
+  text-align: center;
+  width: 100%;
+}
+
+.submit:active {
+  background-color: white;
+  opacity: .2;
+  color: black;
+  border: 2px solid black;
+}
+
 @media screen and (max-width: 575px) {
   .nav-btn {
     display: block;
   }
-
+}
+@media screen and (min-width: 575px) {
+  #app-img {
+    width: 10%;
+    margin: 0 auto;
+    margin-top: 20px;
+  }
 }
 
