--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,6 @@ nav {
 
 /* create listing form  */
 
-
 .create-listing-form {
   align-items: center;
   display: flex;
@@ -219,6 +218,58 @@ nav {
   box-sizing: border-box;
   padding: 5px;
   margin-top: 30px;
+}
+
+/* listing card */
+
+.listing-card {
+  display: flex;
+  margin: 10px;
+  background-color: rgba(255,255,255,.1);
+  border: 2px solid white;
+  border-radius: 20px;
+  align-content: center;
+}
+
+.listing-card img {
+  padding: 20px;
+  border-radius: 10px;
+  width: 20%;
+  height: 20%;
+  justify-self: flex-start;
+  align-self: center;
+  flex-grow: 1;
+}
+
+.listing-card-details {
+  margin: 10px;
+  flex-grow: 5;
+  justify-self: flex-end;
+  align-self: center;
+}
+.listing-card-details h1 {
+  font-size: medium;
+}
+
+.listing-card-details button {
+  background-color: black;
+  font-family: 'Manrope', sans-serif;
+  font-weight: bold;
+  border-radius: 30px;
+  border: 2px solid white;
+  box-sizing: border-box;
+  color: #eee;
+  cursor: pointer;
+  font-size: 18px;
+  height: 50px;
+  outline: 0;
+  text-align: center;
+  padding: 10px;
+}
+.listing-card-details button:active {
+  background-color: white;
+  color: black;
+  border: 2px solid black;
 }
 
 @media screen and (max-width: 575px) {
