--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,6 @@ nav {
   text-align: center;;
   border-radius: 10px;
   padding: 10px;
-  
 }
 
 .home-link {
@@ -79,6 +78,29 @@ nav {
   background-color: transparent;
   color: white;
   border: 2px solid white;
+}
+
+.home-btns {
+  display: flex;
+  width: 100%;
+  align-content: space-around;
+}
+
+.home-btn {
+  background-color: black;
+  font-family: 'Manrope', sans-serif;
+  font-weight: bold;
+  border-radius: 30px;
+  border: 2px solid white;
+  box-sizing: border-box;
+  color: #eee;
+  cursor: pointer;
+  font-size: 18px;
+  outline: 0;
+  text-align: center;
+  padding: 10px;
+  width: 50%;
+  text-decoration: none;
 }
 
 /* create listing form  */
