--- a/src/App.css
+++ b/src/App.css
@@ -76,9 +76,14 @@ nav {
   padding: 10px;
   font-family: 'Manrope', sans-serif;
   font-weight: 600;
-  background-color: transparent;
+  background-color: black;
   color: white;
   border: 2px solid white;
+  width: 100%;
+}
+.home-link:active {
+  transform: translateY(4px);
+  border: 2px solid rgb(169, 175, 66);
 }
 
 .home-btns {
@@ -103,6 +108,8 @@ nav {
   width: 50%;
   text-decoration: none;
 }
+
+
 
 /* create listing form  */
 
@@ -210,7 +217,7 @@ nav {
 }
 
 .submit {
-  background-color: transparent;
+  background-color: black;
   font-family: 'Manrope', sans-serif;
   font-weight: bold;
   border-radius: 30px;
@@ -227,10 +234,8 @@ nav {
 }
 
 .submit:active {
-  background-color: white;
-  opacity: .2;
-  color: black;
-  border: 2px solid black;
+  transform: translateY(4px);
+  border: 2px solid rgb(169, 175, 66);
 }
 
 .photo-trade {
@@ -275,7 +280,7 @@ nav {
   font-size: medium;
 }
 
-.listing-card-details button {
+.listing-card-submit-btn {
   background-color: black;
   font-family: 'Manrope', sans-serif;
   font-weight: bold;
@@ -291,11 +296,9 @@ nav {
   padding: 10px;
 }
 
-.listing-card-details button:active {
-  background-color: white;
-  color: black;
-  border: 2px solid black;
+.listing-card-submit-btn:active {
   transform: translateY(4px);
+  border: 2px solid rgb(169, 175, 66);
 }
 
 /* search  */
@@ -323,9 +326,13 @@ nav {
   border: 0px;
 }
 
-#search-component-button:active {
+#search-component-button img:active {
   transform: translateY(4px);
+  border: 2px solid rgb(169, 175, 66);
+  border-radius: 20px;
 }
+
+
 
 .search-component img {
   width: 50%;
@@ -336,11 +343,13 @@ nav {
   background-color: transparent;
   width: 30%;
   color: white;
-  border: 0px
+  border: 0px;
 }
 
-#search-reset-button:active {
+#search-reset-button img:active {
   transform: translateY(4px);
+  border-radius: 20px;
+  border: 2px solid rgb(251, 25, 61);
 }
 
 .sort-icons {
@@ -390,6 +399,11 @@ nav {
   padding: 10px;
   width: 100%;
   text-decoration: none;
+}
+#log-out:active,
+#change-password:active {
+  transform: translateY(4px);
+  border: 2px solid rgb(169, 175, 66);
 }
 
 /* show listing  */
@@ -462,6 +476,31 @@ nav {
   width: 30%;
   text-decoration: none;
   margin: 3px;
+}
+#listing-users-btn:active {
+  transform: translateY(4px);
+  border: 2px solid rgb(169, 175, 66);
+}
+
+#contact-seller-btn {
+  background-color: black;
+  font-family: 'Manrope', sans-serif;
+  font-weight: bold;
+  border-radius: 30px;
+  border: 2px solid white;
+  box-sizing: border-box;
+  color: #eee;
+  cursor: pointer;
+  font-size: 18px;
+  outline: 0;
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
+  margin: 3px;
+}
+#contact-seller-btn:active {
+  transform: translateY(4px);
+  border: 2px solid rgb(169, 175, 66);
 }
 
 @media screen and (max-width: 575px) {
