--- a/src/App.css
+++ b/src/App.css
@@ -314,6 +314,8 @@ nav {
   border: 2px solid rgb(169, 175, 66);
 }
 
+/* browse listings  */
+
 
 
 /* search  */
@@ -529,5 +531,25 @@ nav {
     width: 10%;
     margin: 0 auto;
     margin-top: 20px;
+  }
+
+  .browse-listings-page {
+    margin: auto;
+    width: 40%;
+  }
+
+  .search-component-actions {
+    width: 50%;
+    margin: auto;
+  }
+
+  .profile-page {
+    width: 50%;
+    margin: auto;
+  }
+
+  .home-page {
+    width: 30%;
+    margin: auto;
   }
 }
