--- a/src/App.css
+++ b/src/App.css
@@ -262,14 +262,36 @@ nav {
 
 /* listing card */
 
+/* .listing-card {
+  height: 150px;
+  width: 150px;
+  background: #fff;
+  border-radius: 20px;
+  margin: 20px;
+  transition: all ease 0.2s;
+}
+.box {
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+}
+.box:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+} */
+
+
+
 .listing-card {
   display: flex;
   margin: 10px;
-  background-color: rgba(255, 255, 255, .1);
-  border: 2px solid white;
+  background-color: black;
   border-radius: 20px;
   align-content: center;
   padding: 10px;
+  box-shadow: 0px 5px 10px 0px rgba(255, 255, 255, 0.5);
+}
+.listing-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 10px 20px 2px rgba(255, 255, 255, 0.25);
 }
 
 .listing-card img {
@@ -279,7 +301,6 @@ nav {
   justify-self: flex-start;
   align-self: center;
   flex-grow: 1;
-  border: 1px solid white;
 }
 
 .listing-card-details {
