--- a/src/App.css
+++ b/src/App.css
@@ -341,12 +341,14 @@ nav {
 
 /* search  */
 
+
+
 .search-component-actions {
   background-color: rgba(255, 255, 255, .1);
   border-radius: 20px;
   padding: 10px;
-  border: 2px solid white;
   margin: 10px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
 .search-component-actions input {
