--- a/src/App.css
+++ b/src/App.css
@@ -464,11 +464,11 @@ nav {
 }
 
 .listing-details {
-  background-color: rgba(255, 255, 255, .1);
+  background-color: rgba(0, 0, 0, 1);
   border-radius: 20px;
-  border: 2px solid white;
   padding: 10px;
   margin-top: 30px;
+  box-shadow: 0px 5px 10px 0px rgba(255, 255, 255, 0.5);
 }
 
 .listing-detail {
@@ -481,12 +481,13 @@ nav {
 .profile-details {
   display: flex;
   flex-direction: row;
-  background-color: rgba(255, 255, 255, .1);
-  border: 2px solid white;
+  background-color: rgba(0, 0, 0, 1);
   border-radius: 20px;
   padding: 10px;
   justify-content: space-around;
   align-items: center;
+  box-shadow: 0px 5px 10px 0px rgba(255, 255, 255, 0.5);
+  margin-bottom: 30px;
 }
 
 .name-and-contact {
